--- a/index.html
+++ b/index.html
@@ -2,8 +2,10 @@
 <html>
   <head>
     <title>abrooks</title>
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Oswald:wght@300&display=swap" rel="stylesheet">
 	<style>
-		@import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');
 	</style>
   </head>
   <body>
