--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Oswald:wght@300&display=swap" rel="stylesheet">
 	<style>
+		font-family: 'Oswald', sans-serif;
 	</style>
   </head>
   <body>
