--- a/index.html
+++ b/index.html
@@ -12,9 +12,8 @@
   <body>
   
     <h1>Welcome to my Website!</h1>
-    <h1>Welcome to my Website!!</h1>
 
-    <p>How are you?</a>.</p>
+    <p>How are you?</p>
 
   </body>
 </html>
