--- a/sites/about.html
+++ b/sites/about.html
@@ -95,7 +95,7 @@
   </head>
   <body>
     <center>
-      <a href="https://abrooks.neocities.org/"><p class="title">Ali Brooks</p></a>
+      <a href="https://abrookst.github.io/"><p class="title">Ali Brooks</p></a>
       <p style="margin:0; font-size:10px;">Independent Game Designer and Aspiring Computer Scientist</p>
     </center>
     <div class="wrapp">
@@ -109,10 +109,10 @@
           </div>
         </div>
         <div class="content">
-          <a href="https://abrooks.neocities.org/sites/about.html"><p>>>>About</p></a>
-          <a href="https://abrooks.neocities.org/sites/projects.html"><p>>>Projects</p></a>
-          <a href="https://abrooks.neocities.org/sites/contact.html"><p>>>Contact</p></a>
-          <a href="https://abrooks.neocities.org/sites/blog.html"><p>>>Blog</p></a>
+          <a href="https://abrookst.github.io/sites/about.html"><p>>>>About</p></a>
+          <a href="https://abrookst.github.io/sites/projects.html"><p>>>Projects</p></a>
+          <a href="https://abrookst.github.io/sites/contact.html"><p>>>Contact</p></a>
+          <a href="https://abrookst.github.io/sites/blog.html"><p>>>Blog</p></a>
         </div>
       </div>
       <div class="contentblock">
