--- a/sites/blogs/welcometomysite.html
+++ b/sites/blogs/welcometomysite.html
@@ -104,6 +104,6 @@
         </div>
       </div>
     </div>
-    <center><u><a href="https://abrooks.neocities.org/sites/blog.html"><p>>>Click here to go back</p></a></u></center>
+    <center><u><a href="https://abrookst.github.io/sites/blog.html"><p>>>Click here to go back</p></a></u></center>
   </body>
 </html>
