--- a/sites/projects.html
+++ b/sites/projects.html
@@ -95,7 +95,7 @@
   </head>
   <body>
     <center>
-      <a href="https://abrooks.neocities.org/"><p class="title">Ali Brooks</p></a>
+      <a href="https://abrookst.github.io/"><p class="title">Ali Brooks</p></a>
       <p style="margin:0; font-size:10px;">Independent Game Designer and Aspiring Computer Scientist</p>
     </center>
     <div class="wrapp">
@@ -109,10 +109,10 @@
           </div>
         </div>
         <div class="content">
-          <a href="https://abrooks.neocities.org/sites/about.html"><p>>>About</p></a>
-          <a href="https://abrooks.neocities.org/sites/projects.html"><p>>>>Projects</p></a>
-          <a href="https://abrooks.neocities.org/sites/contact.html"><p>>>Contact</p></a>
-          <a href="https://abrooks.neocities.org/sites/blog.html"><p>>>Blog</p></a>
+          <a href="https://abrookst.github.io/sites/about.html"><p>>>About</p></a>
+          <a href="https://abrookst.github.io/sites/projects.html"><p>>>>Projects</p></a>
+          <a href="https://abrookst.github.io/sites/contact.html"><p>>>Contact</p></a>
+          <a href="https://abrookst.github.io/sites/blog.html"><p>>>Blog</p></a>
         </div>
       </div>
       <div class="contentblock">
@@ -128,7 +128,7 @@
         
           <p>Here are some of my projects:</p>
           <ul>
-            <u><a href="https://abrooks.itch.io/beautiful-melodius"><li>Beautiful Melodius</li></a></u>
+            <u><a href="https://abrookst.itch.io/beautiful-melodius"><li>Beautiful Melodius</li></a></u>
             <br>
             <u><a href="https://replit.com/@AliBrooks/Suda52#main.py"><li>Suda 52 (9th Grade Project)</li></a></u>
             <br>
