--- a/index.html
+++ b/index.html
@@ -149,9 +149,9 @@
         </div>
         <div class="contentC">
   
-          <p>Welcome! My name is Ali Brooks.</p>
+          <p>Hello! My name is Ali Brooks. And this is my portfolio website!</p>
           <br>
-          <p>If you'd like to learn more about me and what I do, feel free to cick on the links in the windows to the left!</p>
+          <p>If you'd like to learn more about me and what I do, feel free to cick on the links in the navigation window to the left!</p>
           
         </div>
       </div>
