--- a/sites/about.html
+++ b/sites/about.html
@@ -122,17 +122,78 @@
           </div>
         </div>
         <div class="content">
-  
-          <p>My name is Ali Brooks.</p>
-          <br>
-          <p>I'm an aspiring computer scientist, and current independent game designer.</p>
-          <br>
-          <p>I'm a freshman at Rensslear Polytechnic Institute as a computer science major, and I went to the Gilman School in Baltimore for highschool.</p>
-          <br>
-          <p>I love all aspects of CS, but I particularly love artificial inteligence, virtual reality, augmented reality, cyber security, and general CS development.</p>
-          <br>
-          <p>Outside of that, I love reading, writing, playing video games, and diving down research rabbit holes to scratch my curiosity itch!</p>
-      
+          <!--thanks for the idea junfero-->
+          <div>
+            <div>
+              <div id='tldr-button' class='text-module t'>TLDR</div>
+              <div id='default-button' class='text-module t'>Default</div>
+              <div id='TMI-button' class='text-module t'>TMI</div>
+            </div>
+            <!--TLDR-->
+            <div id='tldr' class='subdescrip'>Hi! I'm Ali.</div>
+            <div id='tldr' class='subdescrip'>I go 2 RPI 4 CS, and I &#60;3 CS!</div>  
+            <!--Default-->
+            <div id='default' class='subdescrip'>Hello! My name is Ali Brooks.</div>
+            <div id='default' class='subdescrip'>I'm an aspiring computer scientist, and current independent game designer.</div>
+            <div id='default' class='subdescrip'>I'm attending at Rensslear Polytechnic Institute for my Bachelors in CompSci.</div>
+            <div id='default' class='subdescrip'>I love all aspects of CS, but I particularly love artificial inteligence, virtual reality, augmented reality, cyber security, and game development.</div>
+            <div id='default' class='subdescrip'>Outside of that, I love reading, writing, playing video games, and diving down research rabbit holes to scratch my curiosity itch!
+            </div>
+            <!--TMI-->
+            <div id='TMI' class='subdescrip'>Greetings! It's very nice to meet you, my name is Ali Brooks.</div>
+            <div id='TMI' class='subdescrip'>I'm an aspiring computer scientist, and current independent game designer. You can find some of the games I made in my projects page!</div>
+            <div id='TMI' class='subdescrip'>I'm attending Rensslear Polytechnic Institute in Troy New York for my Bachelors in Computer Science major, and I plan on dualing in Games Simulation Arts and Science (GSAS).</div>
+            <div id='TMI' class='subdescrip'>I went to Gilman in Baltimore Maryland for highschool, where I learned about Java programming in AP Computer Science A, and Data Structures in Java in Honors Advanced Topics In Computer Science. </div>
+            <div id='TMI' class='subdescrip'>While I was in highschool, I taught myself HTML/CSS and python. And I am currently learning and using Javascript and C++ primarily.</div>
+            <div id='TMI' class='subdescrip'>I love all aspects of CS, but I particularly love artificial inteligence, virtual reality, augmented reality, cyber security, and game development.</div>
+            <div id='TMI' class='subdescrip'>Outside of that, I love reading, writing, playing video games, working at cat shelters, working in bee hives, and diving down research rabbit holes to scratch my curiosity itch! I've also been practicing my art.</div>
+          </div>
+          <script>
+            const textModules = document.getElementsByClassName('text-module');
+            const textLines = document.getElementsByClassName('subdescrip');
+
+            function setModule(setting) {
+              for (txt of textLines) {
+                  if (txt.id == setting) txt.style.display = 'block';
+                  else txt.style.display = 'none';
+              }
+            }
+
+            textModules[2].style.borderStyle = 'solid';
+            setModule('default');
+
+            for (let index=0; index<textModules.length; index++) {
+                let mod = textModules[index];
+                mod.addEventListener('click', () => {
+                    for (other of textModules) other.style.borderStyle = 'hidden';
+                    mod.style.borderStyle = 'solid';
+                    setModule(mod.id.split('-')[0]);
+                });
+                mod.addEventListener('mouseover', () => mod.style.cursor = 'pointer');
+            }
+          </script>  
+          <!--
+
+          TLDR:
+          Hi! I'm Ali.
+          I go 2 RPI 4 CS, and I <3 CS!
+
+          Default:
+          Hello! My name is Ali Brooks.
+          I'm an aspiring computer scientist, and current independent game designer.
+          I'm attending at Rensslear Polytechnic Institute for my Bachelors in CompSci.
+          I love all aspects of CS, but I particularly love artificial inteligence, cyber security, and game development.
+          Outside of that, I love reading, writing, playing video games, and diving down research rabbit holes to scratch my curiosity itch!
+
+          TMI:
+          Greetings! It's very nice to meet you, my name is Ali Brooks.
+          I'm an aspiring computer scientist, and current independent game designer. You can find some of the games I made in my projects page!
+          I'm attending Rensslear Polytechnic Institute in Troy New York for my Bachelors in Computer Science major, and I plan on dualing in Games Simulation Arts and Science (GSAS).
+          I went to Gilman in Baltimore Maryland for highschool, where I learned about Java programming in AP Computer Science A, and Data Structures in Java in Honors Advanced Topics In Computer Science. 
+          While I was in highschool, I taught myself HTML/CSS and python. And I am currently learning and using Javascript and C++ primarily.
+          I love all aspects of CS, but I particularly love artificial inteligence, virtual reality, augmented reality, cyber security, and game development.
+          Outside of that, I love reading, writing, playing video games, and diving down research rabbit holes to scratch my curiosity itch!
+          -->
         </div>
       </div>
     </div>
