--- a/index.html
+++ b/index.html
@@ -99,6 +99,10 @@
         font-size:25px;
         margin: 0;
       }
+      .text-module{
+        display: inline-block;
+        padding: 1%;
+      }
 	  
 	  
 	  /* for phones*/
