--- a/sites/about.html
+++ b/sites/about.html
@@ -122,6 +122,7 @@
           </div>
         </div>
         <div class="content">
+          <p>How much do you want to know about me?</p>
           <!--thanks for the idea junfero-->
           <div>
             <div>
@@ -129,6 +130,8 @@
               <div id='default-button' class='text-module t'>Default</div>
               <div id='TMI-button' class='text-module t'>TMI</div>
             </div>
+            <br>
+            <br>
             <!--TLDR-->
             <div id='tldr' class='subdescrip'>Hi! I'm Ali.</div>
             <div id='tldr' class='subdescrip'>I go 2 RPI 4 CS, and I &#60;3 CS!</div>  
