--- a/sites/about.html
+++ b/sites/about.html
@@ -87,6 +87,10 @@
         font-size:25px;
         margin: 0;
       }
+      .text-module{
+        display: inline-block;
+        padding: 1%;
+      }
       
     </style>
   </head>
@@ -127,7 +131,7 @@
           <div>
             <div>
               <div id='tldr-button' class='text-module t'>TLDR</div>
-              <div id='default-button' class='text-module t'>Default</div>
+              <div autofocus id='default-button' class='text-module t'>Default</div>
               <div id='TMI-button' class='text-module t'>TMI</div>
             </div>
             <br>
@@ -164,7 +168,7 @@
             }
 
             textModules[2].style.borderStyle = 'solid';
-            setModule('default');
+            setModule('TLDR');
 
             for (let index=0; index<textModules.length; index++) {
                 let mod = textModules[index];
