--- a/index.html
+++ b/index.html
@@ -84,6 +84,9 @@
         overflow-y: auto;
         margin: 5px;
         padding: 5px;
+        font-family: 'apple_regular';
+        font-weight:normal;
+        font-style:normal;
       }
       #controls{
         display: flex;
