--- a/sites/blog.html
+++ b/sites/blog.html
@@ -132,7 +132,7 @@
             <img width="20" src="/images/button_close.png">
           </div>
         </div>
-        <div class="content">
+        <div class="contentN">
           <a href="https://abrookst.github.io/sites/about.html"><p>>>About</p></a>
           <a href="https://abrookst.github.io/sites/projects.html"><p>>>Projects</p></a>
           <a href="https://abrookst.github.io/sites/contact.html"><p>>>Contact</p></a>
@@ -148,7 +148,7 @@
             <img width="20" src="/images/button_close.png">
           </div>
         </div>
-        <div class="content">
+        <div class="contentC">
         
         
           <hr>
