--- a/sites/blogs/welcometomysite.html
+++ b/sites/blogs/welcometomysite.html
@@ -128,7 +128,7 @@
             <img width="20" src="/images/button_close.png">
           </div>
         </div>
-        <div class="content">
+        <div class="contentC">
         
         
           <p>Welcome To My Site!</p>
