--- a/sites/contact.html
+++ b/sites/contact.html
@@ -215,7 +215,7 @@
             <img width="20" src="/images/button_close.png">
           </div>
         </div>
-        <div class="content">
+        <div class="contentN">
           <a href="https://abrookst.github.io/sites/about.html"><p>>>About</p></a>
           <a href="https://abrookst.github.io/sites/projects.html"><p>>>Projects</p></a>
           <a href="https://abrookst.github.io/sites/contact.html"><p>>>>Contact</p></a>
@@ -231,7 +231,7 @@
             <img width="20" src="/images/button_close.png">
           </div>
         </div>
-        <div class="content">
+        <div class="contentC">
   
           
       
