--- a/sites/projects.html
+++ b/sites/projects.html
@@ -152,6 +152,8 @@
         
           <p>Here are some of my projects:</p>
           <ul>
+            <u><a href="https://abrooks.itch.io/cathartic-cartography"><li>Cathartic Cartography (RPI 9/22 Game Jam)</li></a></u>
+            <br>
             <u><a href="https://abrookst.itch.io/beautiful-melodius"><li>Beautiful Melodius</li></a></u>
             <br>
             <u><a href="https://replit.com/@AliBrooks/Suda52#main.py"><li>Suda 52 (9th Grade Project)</li></a></u>
