updating projects to portfolio

--- a/sites/portfolio.html
+++ b/sites/portfolio.html
@@ -134,14 +134,14 @@
         </div>
         <div class="contentN">
           <a href="https://abrookst.github.io/sites/about.html"><p>>>About</p></a>
-          <a href="https://abrookst.github.io/sites/projects.html"><p>>>>Projects</p></a>
+          <a href="https://abrookst.github.io/sites/portfolio.html"><p>>>>Portfolio</p></a>
           <a href="https://abrookst.github.io/sites/contact.html"><p>>>Contact</p></a>
           <a href="https://abrookst.github.io/sites/blog.html"><p>>>Blog</p></a>
         </div>
       </div>
       <div class="contentblock">
         <div class="header">
-          <p class="headertext">projects.html</p>
+          <p class="headertext">portfolio.html</p>
           <div id="controls">
             <img width="20" src="/images/button_minimize.png">
             <img width="20" src="/images/button_maximize.png">
@@ -149,12 +149,13 @@
           </div>
         </div>
         <div class="contentC">
-        
-          <p>Here are some of my projects:</p>
+          <p>Want to see the source code for these projects? Check out my <a href="https://github.com/abrookst">GitHub</a>!</p>
+          <iframe src="https://itch.io/embed/1691549" width="552" height="167" frameborder="0"><a href="https://abrooks.itch.io/cathartic-cartography">Cathartic Cartography! by abrooks</a></iframe>
+          <br>
+          <iframe src="https://itch.io/embed/1106726" width="552" height="167" frameborder="0"><a href="https://abrooks.itch.io/beautiful-melodius">BEAUTIFUL MELODIUS (美しいメロディウス) by abrooks</a></iframe>
+          <br>
+          <p>Here are some smaller projects I did in highschool:</p>
           <ul>
-            <u><a href="https://abrooks.itch.io/cathartic-cartography"><li>Cathartic Cartography (RPI 9/22 Game Jam)</li></a></u>
-            <br>
-            <u><a href="https://abrookst.itch.io/beautiful-melodius"><li>Beautiful Melodius</li></a></u>
             <br>
             <u><a href="https://replit.com/@AliBrooks/Suda52#main.py"><li>Suda 52 (9th Grade Project)</li></a></u>
             <br>
