--- a/sites/about.html
+++ b/sites/about.html
@@ -134,7 +134,7 @@
         </div>
         <div class="contentN">
           <a href="https://abrookst.github.io/sites/about.html"><p>>>>About</p></a>
-          <a href="https://abrookst.github.io/sites/projects.html"><p>>>Projects</p></a>
+          <a href="https://abrookst.github.io/sites/portfolio.html"><p>>>Portfolio</p></a>
           <a href="https://abrookst.github.io/sites/contact.html"><p>>>Contact</p></a>
           <a href="https://abrookst.github.io/sites/blog.html"><p>>>Blog</p></a>
         </div>
@@ -172,9 +172,9 @@
             </div>
             <!--TMI-->
             <div id='TMI' class='subdescrip'>Greetings! It's very nice to meet you, my name is Ali Brooks.</div>
-            <div id='TMI' class='subdescrip'>I'm an aspiring computer scientist, and current independent game designer. You can find some of the games I made in my projects page!</div>
+            <div id='TMI' class='subdescrip'>I'm an aspiring computer scientist, and current independent game designer. You can find some of the games I made in my Portfolio page!</div>
             <div id='TMI' class='subdescrip'>I'm attending Rensslear Polytechnic Institute in Troy New York for my Bachelors in Computer Science major, and I plan on dualing in Games Simulation Arts and Science (GSAS).</div>
-            <div id='TMI' class='subdescrip'>I went to Gilman in Baltimore Maryland for highschool, where I learned about Java programming in AP Computer Science A, and Data Structures in Java in Honors Advanced Topics In Computer Science. </div>
+            <div id='TMI' class='subdescrip'>I went to Gilman in Baltimore Maryland for highschool, where I learned about Java programming in AP Computer Science A, and Java Data Structures in Honors Advanced Topics In Computer Science.</div>
             <div id='TMI' class='subdescrip'>While I was in highschool, I taught myself HTML/CSS and python. And I am currently learning and using Javascript and C++ primarily.</div>
             <div id='TMI' class='subdescrip'>I love all aspects of CS, but I particularly love artificial inteligence, virtual reality, augmented reality, cyber security, and game development.</div>
             <div id='TMI' class='subdescrip'>Outside of that, I love reading, writing, playing video games, working at cat shelters, working in bee hives, and diving down research rabbit holes to scratch my curiosity itch! I've also been practicing my art.</div>
@@ -190,7 +190,7 @@
               }
             }
 
-            textModules[2].style.borderStyle = 'solid';
+            textModules[1].style.borderStyle = 'solid';
             setModule('default');
 
             for (let index=0; index<textModules.length; index++) {
@@ -218,7 +218,7 @@
 
           TMI:
           Greetings! It's very nice to meet you, my name is Ali Brooks.
-          I'm an aspiring computer scientist, and current independent game designer. You can find some of the games I made in my projects page!
+          I'm an aspiring computer scientist, and current independent game designer. You can find some of the games I made in my Portfolio page!
           I'm attending Rensslear Polytechnic Institute in Troy New York for my Bachelors in Computer Science major, and I plan on dualing in Games Simulation Arts and Science (GSAS).
           I went to Gilman in Baltimore Maryland for highschool, where I learned about Java programming in AP Computer Science A, and Data Structures in Java in Honors Advanced Topics In Computer Science. 
           While I was in highschool, I taught myself HTML/CSS and python. And I am currently learning and using Javascript and C++ primarily.
