--- a/sites/blog.html
+++ b/sites/blog.html
@@ -134,7 +134,7 @@
         </div>
         <div class="contentN">
           <a href="https://abrookst.github.io/sites/about.html"><p>>>About</p></a>
-          <a href="https://abrookst.github.io/sites/projects.html"><p>>>Projects</p></a>
+          <a href="https://abrookst.github.io/sites/portfolio.html"><p>>>Portfolio</p></a>
           <a href="https://abrookst.github.io/sites/contact.html"><p>>>Contact</p></a>
           <a href="https://abrookst.github.io/sites/blog.html"><p>>>>Blog</p></a>
         </div>
