--- a/sites/portfolio.html
+++ b/sites/portfolio.html
@@ -154,14 +154,14 @@
           <br>
           <iframe src="https://itch.io/embed/1106726" width="552" height="167" frameborder="0"><a href="https://abrooks.itch.io/beautiful-melodius">BEAUTIFUL MELODIUS (美しいメロディウス) by abrooks</a></iframe>
           <br>
-          <p>Here are some smaller projects I did in highschool:</p>
+          <p>Other Links:</p>
           <ul>
             <br>
-            <u><a href="https://replit.com/@AliBrooks/Suda52#main.py"><li>Suda 52 (9th Grade Project)</li></a></u>
+            <u><a href="https://docs.google.com/document/d/1jfO6FAeblt1dOmWnj5U5bb0L80d6RBYW/edit?usp=sharing&ouid=112988321144216322130&rtpof=true&sd=true"><li>Resume</li></a></u>
             <br>
-            <u><a href="https://replit.com/@AliBrooks/PowerBitPowerTrip-2#Main.java"><li>PowerBitPowerTrip 2 (11th Grade Project)</li></a></u>
+            <u><a href="https://www.linkedin.com/in/abrookst/"><li>Linked-In</li></a></u>
             <br>
-            <li>...And more on the way!</li> 
+            <u><a href="https://replit.com/@AliBrooks/"><li>Highschool Replit account</li></a></u>
           </ul>
           
         </div>
