--- a/sites/portfolio.html
+++ b/sites/portfolio.html
@@ -149,7 +149,7 @@
           </div>
         </div>
         <div class="contentC">
-          <p>Want to see the source code for these projects and this website? Check out my <u><a href="https://github.com/abrookst">GitHub</a></u>u>!</p>
+          <p>Want to see the source code for these projects and this website? Check out my <u><a href="https://github.com/abrookst">GitHub</a></u>!</p>
           <iframe src="https://itch.io/embed/1691549" width="552" height="167" frameborder="0"><a href="https://abrooks.itch.io/cathartic-cartography">Cathartic Cartography! by abrooks</a></iframe>
           <br>
           <iframe src="https://itch.io/embed/1106726" width="552" height="167" frameborder="0"><a href="https://abrooks.itch.io/beautiful-melodius">BEAUTIFUL MELODIUS (美しいメロディウス) by abrooks</a></iframe>
