--- a/sites/blogs/metaverse.html
+++ b/sites/blogs/metaverse.html
@@ -134,7 +134,7 @@
           <p>Hello! Welcome to my first blogpost!</p>
           <br>
           <p>Today, I would like to talk about the metaverse. As the weather cools, and fall comes, the “hype” around the metaverse has seemingly waned. I’m seeing less and less articles about a <a href="">metaverse fashion show</a> or how The Oscars made <a href="">Chadwick Boseman into an NFT</a>. This can be pretty easily seen in the google trends, where “NFT”, “Crypto”, and “Metaverse” are sitting at an all time low. </p>
-          <img href="/images/blog images/crypto graph.png">
+          <img src="/images/blog images/crypto graph.png">
           <p style="size: 8">google trends for "crypto"</p>
           <br>
           <p>This was honestly inevitable, in more ways than one. Trying to muscle in the new wave of technology with raw acquisitions, money, and hype leads to nothing but a fad. The brighter the star shines, the quicker it burns out. But I do not believe that the metaverse is a fad, and no matter how critical I am of NFTs, I believe it and the blockchain has its place.</p>
@@ -144,7 +144,7 @@
           <p>But again, these technologies that have become mainstream weren’t started in huge multi-billion dollar marketing pushes. They were made by people with a vision and a passion. Sure John Carmack had a hand in Oculus’ origin, but Oculus didn’t have a conference room full of investors waiting for this whole “VR” thing they spent a lot of money investing in. The money came from the community, via Kickstarter. And that's how I believe the metaverse will be made, by those who want to see it done, and it doesn’t have to be done by Q3 2022. </p>
           <br>
           <p>And we almost had it, we almost had that lovingly made community metaverse— with an application called Neos VR— but as ThrillSeeker pointed out in a fantastic video, the hype behind the future of tech is what killed the most advanced VR application we’ve seen to date. </p>
-          <img href="/images/blog images/neosVR.jpg">
+          <img src="/images/blog images/neosVR.jpg">
           <p style="size: 8">Neos VR</p>
           <br>
           <p>All I can hope for is that this doesn't become the next Virtual Boy, that <a href="https://www.pcgamer.com/teens-are-split-on-the-metaverse-most-barely-use-vr-headsets-survey-shows/">the uphill struggle</a> we’re already facing to move the metaverse and VR forward wasn't just worsened by a rich visionary at the top of their game once again. To quote Kotaku about Facebook’s Metaverse Application "Horizon":</p>
