updating links and resume

--- a/sites/about.html
+++ b/sites/about.html
@@ -162,14 +162,13 @@
             <br>
             <!--TLDR-->
             <div id='tldr' class='subdescrip'>Hi! I'm Ali.</div>
-            <div id='tldr' class='subdescrip'>I go 2 RPI 4 CS, and I &#60;3 CS!</div>  
+            <div id='tldr' class='subdescrip'>I go 2 RPI 4 CS & I &#60;3 CS!</div>  
             <!--Default-->
             <div id='default' class='subdescrip'>Hello! My name is Ali Brooks.</div>
             <div id='default' class='subdescrip'>I'm an aspiring computer scientist, and current independent game designer.</div>
-            <div id='default' class='subdescrip'>I'm attending at Rensslear Polytechnic Institute for my Bachelors in CompSci.</div>
+            <div id='default' class='subdescrip'>I'm attending at Rensslear Polytechnic Institute for my Bachelors in Computer Science.</div>
             <div id='default' class='subdescrip'>I love all aspects of CS, but I particularly love artificial inteligence, virtual reality, augmented reality, cyber security, and game development.</div>
-            <div id='default' class='subdescrip'>Outside of that, I love reading, writing, playing video games, and diving down research rabbit holes to scratch my curiosity itch!
-            </div>
+            <div id='default' class='subdescrip'>Outside of that, I love reading, writing, playing video games, and diving down research rabbit holes to scratch my curiosity itch!</div>
             <!--TMI-->
             <div id='TMI' class='subdescrip'>Greetings! It's very nice to meet you, my name is Ali Brooks.</div>
             <div id='TMI' class='subdescrip'>I'm an aspiring computer scientist, and current independent game designer. You can find some of the games I made in my Portfolio page!</div>
