--- a/sites/portfolio.html
+++ b/sites/portfolio.html
@@ -149,19 +149,19 @@
           </div>
         </div>
         <div class="contentC">
-          <p>Want to see the source code for these projects and this website? Check out my <u><a href="https://github.com/abrookst">GitHub</a></u>!</p>
-          <iframe src="https://itch.io/embed/1691549" width="552" height="167" frameborder="0"><a href="https://abrooks.itch.io/cathartic-cartography">Cathartic Cartography! by abrooks</a></iframe>
+          <p>Want to see the source code for these projects and this website? Check out my <u><a href="https://github.com/abrookst" target="_blank">GitHub</a></u>!</p>
+          <iframe src="https://itch.io/embed/1691549" width="552" height="167" frameborder="0"><a href="https://abrooks.itch.io/cathartic-cartography" target="_blank">Cathartic Cartography! by abrooks</a></iframe>
           <br>
-          <iframe src="https://itch.io/embed/1106726" width="552" height="167" frameborder="0"><a href="https://abrooks.itch.io/beautiful-melodius">BEAUTIFUL MELODIUS (美しいメロディウス) by abrooks</a></iframe>
+          <iframe src="https://itch.io/embed/1106726" width="552" height="167" frameborder="0"><a href="https://abrooks.itch.io/beautiful-melodius" target="_blank">BEAUTIFUL MELODIUS (美しいメロディウス) by abrooks</a></iframe>
           <br>
           <p>Other Links:</p>
           <ul>
             <br>
-            <u><a href="https://docs.google.com/document/d/1jfO6FAeblt1dOmWnj5U5bb0L80d6RBYW/edit?usp=sharing&ouid=112988321144216322130&rtpof=true&sd=true"><li>Resume</li></a></u>
+            <u><a href="/files/resume.pdf" target="_blank"><li>Resume</li></a></u>
             <br>
-            <u><a href="https://www.linkedin.com/in/abrookst/"><li>Linked-In</li></a></u>
+            <u><a href="https://www.linkedin.com/in/abrookst/" target="_blank"><li>Linked-In</li></a></u>
             <br>
-            <u><a href="https://replit.com/@AliBrooks/"><li>Highschool Replit account</li></a></u>
+            <u><a href="https://replit.com/@AliBrooks/" target="_blank"><li>Highschool Replit account</li></a></u>
           </ul>
           
         </div>
