--- a/sites/blogs/metaverse.html
+++ b/sites/blogs/metaverse.html
@@ -121,7 +121,7 @@
     <div class="wrapp">
       <div class="contentblock">
         <div class="header">
-          <p class="headertext">welcometomysite.html</p>
+          <p class="headertext">metaverse.html</p>
           <div id="controls">
             <img width="20" src="/images/button_minimize.png">
             <img width="20" src="/images/button_maximize.png">
