--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         display: inline-block;
         border: 3px solid #5024cc;
         width: 300px;
-        height 85vh;
+        height: 85vh;
         overflow-y: hidden;
         overflow-x: hidden;
         padding: 5px;
@@ -52,7 +52,7 @@
         display: inline-block;
         border: 3px solid #5024cc;
         width: 600px;
-        height 85vh;
+        height: 85vh;
         overflow-y: hidden;
         overflow-x: hidden;
         padding: 5px;
@@ -107,7 +107,8 @@
 	  
 	  /* for phones*/
 	@media only screen and (max-width: 880px) {
-		 .navblock {width: 40vh;}
+		 .wrapp {flex-wrap: wrap}
+		 .navblock {width: 100vh;}
 		 .contentN {height: 23vh;}
 		 .contentblock {height: 50vh;}
 		 .contentC {height: 43vh; overflow-y: scroll;}
