--- a/index.html
+++ b/index.html
@@ -108,10 +108,10 @@
 	  /* for phones*/
 	@media only screen and (max-width: 880px) {
 		 .wrapp {flex-wrap: wrap}
-		 .navblock {width: 100vh;}
-		 .contentN {height: 23vh;}
-		 .contentblock {height: 50vh;}
-		 .contentC {height: 43vh; overflow-y: scroll;}
+		 .navblock {width: 100vh; height: 25vh;}
+		 .contentN {height: 20vh; overflow-y: hidden;}
+		 .contentblock {width: 100vh; height: 50vh;}
+		 .contentC {height: 40vh; overflow-y: scroll; word-wrap: break-word;}
 		 
 	}
       
