--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
       }
 	  
 	  
-	  /* for phones*/
+	/* for phones*/
 	@media only screen and (max-width: 880px) {
 		 .wrapp {flex-wrap: wrap}
 		 .navblock {width: 100vh; height: 30vh;}
@@ -114,13 +114,14 @@
 		 .contentC {height: 40vh; overflow-y: scroll; word-wrap: break-word;}
 		 
 	}
+  /* for zflip phones*/
   @media only screen and (max-width: 320px) {
 		 .wrapp {flex-wrap: wrap}
 		 .navblock {width: 100vh; height: 30vh;}
 		 .contentN {height: 20vh; overflow-y: hidden;}
 		 .contentblock {width: 100vh; height: 50vh;}
 		 .contentC {height: 40vh; overflow-y: scroll; word-wrap: break-word;}
-     .header { object-fit: cover; }
+     .controls { width: 30%; }
 		 
 	}
       
