--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
 		 .contentN {height: 20vh; overflow-y: hidden;}
 		 .contentblock {width: 100vh; height: 50vh;}
 		 .contentC {height: 40vh; overflow-y: scroll; word-wrap: break-word;}
-     .controls { width: 30%; }
+     .headertext { font-size: 10px; }
 		 
 	}
       
