--- a/index.html
+++ b/index.html
@@ -103,7 +103,25 @@
         font-size:25px;
         margin: 0;
       }
-	
+	/* for phones*/
+@media only screen and (max-width: 880px) {
+  .wrapp {flex-wrap: wrap}
+  .navblock {width: 100vh; height: 30vh;}
+  .contentN {height: 20vh; overflow-y: hidden;}
+  .contentblock {width: 100vh; height: 50vh;}
+  .contentC {height: 40vh; overflow-y: scroll; word-wrap: break-word;}
+  
+}
+/* for zflip phones*/
+@media only screen and (max-width: 320px) {
+  .wrapp {flex-wrap: wrap}
+  .navblock {width: 100vh; height: 30vh;}
+  .contentN {height: 20vh; overflow-y: hidden;}
+  .contentblock {width: 100vh; height: 50vh;}
+  .contentC {height: 40vh; overflow-y: scroll; word-wrap: break-word;}
+  .headertext { font-size: 10px; }
+  
+}
       
     </style>
   </head>
