--- a/sites/blogs/welcometomysite.html
+++ b/sites/blogs/welcometomysite.html
@@ -106,14 +106,16 @@
 	  
 	  
 	  /* for phones*/
-	@media only screen and (max-width: 880px) {
-		 .wrapp {display: none;}
-		 .navblock {width: 40vh;}
-		 .contentN {height: 23vh;}
-		 .contentblock {height: 50vh;}
-		 .contentC {height: 43vh; overflow-y: scroll;}
-		 
-	}
+    @media only screen and (max-width: 880px) {
+      .contentblock {height: 90vh;}
+      .contentC {height: 80vh; overflow-y: scroll; word-wrap: break-word;}
+    }
+    /* for zflip phones*/
+    @media only screen and (max-width: 320px) {
+      .contentblock {height: 90vh;}
+      .contentC {height: 80vh; overflow-y: scroll; word-wrap: break-word;}
+      .headertext { font-size: 10px; }
+    }
       
     </style>
   </head>
