--- a/sites/blogs/welcometomysite.html
+++ b/sites/blogs/welcometomysite.html
@@ -40,7 +40,7 @@
         display: inline-block;
         border: 3px solid #5024cc;
         width: 300px;
-        height 85vh;
+        height: 85vh;
         overflow-y: hidden;
         overflow-x: hidden;
         padding: 5px;
@@ -52,7 +52,7 @@
         display: inline-block;
         border: 3px solid #5024cc;
         width: 600px;
-        height 85vh;
+        height: 85vh;
         overflow-y: hidden;
         overflow-x: hidden;
         padding: 5px;
