--- a/sites/blogs/metaverse.html
+++ b/sites/blogs/metaverse.html
@@ -145,13 +145,13 @@
           <br>
           <p>But again, these technologies that have become mainstream weren&apost started in huge multi-billion dollar marketing pushes. They were made by people with a vision and a passion. Sure John Carmack had a hand in Oculus&apos origin, but Oculus didn&apost have a conference room full of investors waiting for this whole &quotVR&quot thing they spent a lot of money investing in. The money came from the community, via Kickstarter. And that's how I believe the metaverse will be made, by those who want to see it done, and it doesn&apost have to be done by Q3 2022. </p>
           <br>
-          <p>And we almost had it, we almost had that lovingly made community metaverse— with an application called Neos VR— but as ThrillSeeker pointed out in a fantastic video, the hype behind the future of tech is what killed the most advanced VR application we&aposve seen to date. </p>
+          <p>And we almost had it, we almost had that lovingly made community metaverse&mdash with an application called Neos VR&mdash but as ThrillSeeker pointed out in a fantastic video, the hype behind the future of tech is what killed the most advanced VR application we&aposve seen to date. </p>
           <img width="500" src="/images/blog images/neosVR.jpg">
           <p style="size: 8">Neos VR</p>
           <br>
           <p>All I can hope for is that this doesn't become the next Virtual Boy, that <a href="https://www.pcgamer.com/teens-are-split-on-the-metaverse-most-barely-use-vr-headsets-survey-shows/">the uphill struggle</a> we&aposre already facing to move the metaverse and VR forward wasn't just worsened by a rich visionary at the top of their game once again. To quote Kotaku about Facebook&aposs Metaverse Application "Horizon":</p>
           <br>
-          <q><p>“Horizon isn&apost quite as awful as the ad makes it seem, but it is still a hollow, corporate shell that has more in common with an office than it does a playground, or any other type of social space a human being would willingly want to hang out in. It&aposs definitely no VRchat or Rec Room.”</p></q>
+          <em><p>“Horizon isn&apost quite as awful as the ad makes it seem, but it is still a hollow, corporate shell that has more in common with an office than it does a playground, or any other type of social space a human being would willingly want to hang out in. It&aposs definitely no VRchat or Rec Room.”</p></em>
           <br>
           <p>And I wholeheartedly believe that this shouldn&apost be all the metaverse has to offer. And I hope another project like Neos comes around to show us how the Metaverse should actually be done.</p>
 
