--- a/sites/blogs/metaverse.html
+++ b/sites/blogs/metaverse.html
@@ -151,7 +151,7 @@
           <br>
           <p>All I can hope for is that this doesn't become the next Virtual Boy, that <a href="https://www.pcgamer.com/teens-are-split-on-the-metaverse-most-barely-use-vr-headsets-survey-shows/">the uphill struggle</a> we&rsquore already facing to move the metaverse and VR forward wasn't just worsened by a rich visionary at the top of their game once again. To quote Kotaku about Facebook&rsquos Metaverse Application "Horizon":</p>
           <br>
-          <em><p>“Horizon isn&rsquot quite as awful as the ad makes it seem, but it is still a hollow, corporate shell that has more in common with an office than it does a playground, or any other type of social space a human being would willingly want to hang out in. It&rsquos definitely no VRchat or Rec Room.”</p></em>
+          <p>“Horizon isn&rsquot quite as awful as the ad makes it seem, but it is still a hollow, corporate shell that has more in common with an office than it does a playground, or any other type of social space a human being would willingly want to hang out in. It&rsquos definitely no VRchat or Rec Room.”</p>
           <br>
           <p>And I wholeheartedly believe that this shouldn&rsquot be all the metaverse has to offer. And I hope another project like Neos comes around to show us how the Metaverse should actually be done.</p>
 
