trying to fix contact

--- a/sites/about.html
+++ b/sites/about.html
@@ -40,7 +40,7 @@
         display: inline-block;
         border: 3px solid #5024cc;
         width: 300px;
-        height 85vh;
+        height: 85vh;
         overflow-y: hidden;
         overflow-x: hidden;
         padding: 5px;
@@ -52,7 +52,7 @@
         display: inline-block;
         border: 3px solid #5024cc;
         width: 600px;
-        height 85vh;
+        height: 85vh;
         overflow-y: hidden;
         overflow-x: hidden;
         padding: 5px;
@@ -122,7 +122,7 @@
       .contentblock {width: 100vh; height: 50vh;}
       .contentC {height: 40vh; overflow-y: scroll; word-wrap: break-word;}
       .headertext { font-size: 10px; }
-      
+    }  
       
     </style>
   </head>
