--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link href="/style.css" rel="stylesheet" type="text/css" media="all">
     <style>
       body{
-        background: linear-gradient(-45deg, #018281, #2596be, #088059, #25beb1);
+        background: linear-gradient(-45deg, #018281, #4263ce, #088059, #25beb1);
   	    background-size: 400% 400%;
   	    animation: gradient 15s ease infinite;
   	    height: 90vh;
