--- a/index.html
+++ b/index.html
@@ -127,8 +127,8 @@
   </head>
   <body>
     <center>
-      <a href="https://abrookst.github.io/"><p class="title">Ali Brooks</p></a>
-      <p style="margin:0; font-size:10px;">Independent Game Designer and Aspiring Computer Scientist</p>
+      <a href="https://abrookst.github.io/"><p class="title">Ali Brooks</p>
+      <p style="margin:0; font-size:10px;">Independent Game Designer and Aspiring Computer Scientist</p></a>
     </center>
     <div class="wrapp">
       <div class="navblock">
