--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
         background: #dfdedf;
         display: inline-block;
         border: 3px solid #5024cc;
+        border-style: outset;
         width: 300px;
         height: 85vh;
         overflow-y: hidden;
@@ -51,6 +52,7 @@
         background: #dfdedf;
         display: inline-block;
         border: 3px solid #5024cc;
+        border-style: outset;
         width: 600px;
         height: 85vh;
         overflow-y: hidden;
@@ -67,6 +69,7 @@
       }
       .contentN{
         background: #ffffff;
+        color: #5024cc;
         border: 3px solid #5024cc;
         padding: 3px 2px 3px 3px;
         height: 75vh;
@@ -78,6 +81,7 @@
       }
 	  .contentC{
         background: #ffffff;
+        color: #5024cc;
         border: 3px solid #5024cc;
         padding: 3px 2px 3px 3px;
         height: 75vh;
