--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       .navblock {
         background: #dfdedf;
         display: inline-block;
-        border: 3px solid #5024cc;
+        border: 3px solid #a8a8a8;
         border-style: outset;
         width: 300px;
         height: 85vh;
@@ -51,7 +51,7 @@
       .contentblock {
         background: #dfdedf;
         display: inline-block;
-        border: 3px solid #5024cc;
+        border: 3px solid #a8a8a8;
         border-style: outset;
         width: 600px;
         height: 85vh;
@@ -61,7 +61,7 @@
         margin: 10px;
       }
       .header{
-        background: #dfdedf;
+        background-image: linear-gradient(to right, #32347a, #a4bce1);
         border: 3px solid #5024cc;
         padding: 3px 2px 3px 3px;
         display: flex;
@@ -132,7 +132,7 @@
   <body>
     <center>
       <a href="https://abrookst.github.io/"><p class="title">Ali Brooks</p>
-      <p style="margin:0; font-size:10px;">Independent Game Designer and Aspiring Computer Scientist</p></a>
+      <p style="margin:0; font-size:10px; color: #ffffff;">Independent Game Designer and Aspiring Computer Scientist</p></a>
     </center>
     <div class="wrapp">
       <div class="navblock">
