--- a/index.html
+++ b/index.html
@@ -44,7 +44,6 @@
         height: 85vh;
         overflow-y: hidden;
         overflow-x: hidden;
-        padding: 5px;
         margin: 10px;
       }
 
@@ -57,7 +56,6 @@
         height: 85vh;
         overflow-y: hidden;
         overflow-x: hidden;
-        padding: 5px;
         margin: 10px;
       }
       .header{
@@ -99,7 +97,7 @@
         justify-content: flex-end;
       }
       .headertext{
-        color: #5024cc;
+        color: #ffffff;
         font-size: 13px;
         margin: 0px;
       }
