--- a/sites/about.html
+++ b/sites/about.html
@@ -8,7 +8,7 @@
     <link href="/style.css" rel="stylesheet" type="text/css" media="all">
     <style>
       body{
-        background: linear-gradient(-45deg, #e08fe3, #b38fe3, #8f96e3, #8fc0e3);
+        background: linear-gradient(-45deg, #018281, #4263ce, #088059, #25beb1);
   	    background-size: 400% 400%;
   	    animation: gradient 15s ease infinite;
   	    height: 90vh;
@@ -38,28 +38,28 @@
       .navblock {
         background: #dfdedf;
         display: inline-block;
-        border: 3px solid #5024cc;
+        border: 3px solid #a8a8a8;
+        border-style: outset;
         width: 300px;
         height: 85vh;
         overflow-y: hidden;
         overflow-x: hidden;
-        padding: 5px;
         margin: 10px;
       }
 
       .contentblock {
         background: #dfdedf;
         display: inline-block;
-        border: 3px solid #5024cc;
+        border: 3px solid #a8a8a8;
+        border-style: outset;
         width: 600px;
         height: 85vh;
         overflow-y: hidden;
         overflow-x: hidden;
-        padding: 5px;
         margin: 10px;
       }
       .header{
-        background: #dfdedf;
+        background-image: linear-gradient(to right, #32347a, #a4bce1);
         border: 3px solid #5024cc;
         padding: 3px 2px 3px 3px;
         display: flex;
@@ -67,9 +67,10 @@
       }
       .contentN{
         background: #ffffff;
+        color: #5024cc;
         border: 3px solid #5024cc;
         padding: 3px 2px 3px 3px;
-        height: 75vh;
+        height: 77.5vh;
         overflow-x: hidden;
         overflow-y: auto;
         margin: 5px;
@@ -78,9 +79,10 @@
       }
 	  .contentC{
         background: #ffffff;
+        color: #5024cc;
         border: 3px solid #5024cc;
         padding: 3px 2px 3px 3px;
-        height: 75vh;
+        height: 77.5vh;
         overflow-x: hidden;
         overflow-y: auto;
         margin: 5px;
@@ -95,7 +97,7 @@
         justify-content: flex-end;
       }
       .headertext{
-        color: #5024cc;
+        color: #ffffff;
         font-size: 13px;
         margin: 0px;
       }
@@ -103,33 +105,32 @@
         font-size:25px;
         margin: 0;
       }
-	  
-	  
-	  /* for phones*/
-    @media only screen and (max-width: 880px) {
-      .wrapp {flex-wrap: wrap}
-      .navblock {width: 100vh; height: 30vh;}
-      .contentN {height: 20vh; overflow-y: hidden;}
-      .contentblock {width: 100vh; height: 50vh;}
-      .contentC {height: 40vh; overflow-y: scroll; word-wrap: break-word;}
-      
-    }
-    /* for zflip phones*/
-    @media only screen and (max-width: 320px) {
-      .wrapp {flex-wrap: wrap}
-      .navblock {width: 100vh; height: 30vh;}
-      .contentN {height: 20vh; overflow-y: hidden;}
-      .contentblock {width: 100vh; height: 50vh;}
-      .contentC {height: 40vh; overflow-y: scroll; word-wrap: break-word;}
-      .headertext { font-size: 10px; }
-    }  
+	/* for phones*/
+@media only screen and (max-width: 880px) {
+  .wrapp {flex-wrap: wrap}
+  .navblock {width: 100vh; height: 30vh;}
+  .contentN {height: 22vh; overflow-y: hidden;}
+  .contentblock {width: 100vh; height: 50vh;}
+  .contentC {height: 42vh; overflow-y: scroll; word-wrap: break-word;}
+  
+}
+/* for zflip phones*/
+@media only screen and (max-width: 320px) {
+  .wrapp {flex-wrap: wrap}
+  .navblock {width: 100vh; height: 30vh;}
+  .contentN {height: 22vh; overflow-y: hidden;}
+  .contentblock {width: 100vh; height: 50vh;}
+  .contentC {height: 42vh; overflow-y: scroll; word-wrap: break-word;}
+  .headertext { font-size: 10px; }
+  
+}
       
     </style>
   </head>
   <body>
     <center>
-      <a href="https://abrookst.github.io/"><p class="title">Ali Brooks</p></a>
-      <p style="margin:0; font-size:10px;">Independent Game Designer and Aspiring Computer Scientist</p>
+      <a href="https://abrookst.github.io/"><p class="title">Ali Brooks</p>
+      <p style="margin:0; font-size:10px; color: #ffffff;">Independent Game Designer and Aspiring Computer Scientist</p></a>
     </center>
     <div class="wrapp">
       <div class="navblock">
@@ -157,82 +158,84 @@
             <img width="20" src="/images/button_close.png">
           </div>
         </div>
-        <div class="contentC" style="font-family: 'apple_regular';">
-          <p>How much do you want to know about me?</p>
-          <!--thanks for the idea junfero-->
-          <div>
+        <div class="contentC">
+  
+          <div class="contentC" style="font-family: 'apple_regular';">
+            <p>How much do you want to know about me?</p>
+            <!--thanks for the idea junfero-->
             <div>
-              <div id='tldr-button' class='text-module t'>TLDR</div>
-              <div autofocus id='default-button' class='text-module t'>Default</div>
-              <div id='TMI-button' class='text-module t'>TMI</div>
+              <div>
+                <div id='tldr-button' class='text-module t'>TLDR</div>
+                <div autofocus id='default-button' class='text-module t'>Default</div>
+                <div id='TMI-button' class='text-module t'>TMI</div>
+              </div>
+              <br>
+              <hr>
+              <br>
+              <!--TLDR-->
+              <div id='tldr' class='subdescrip'>Hi! I'm Ali.</div>
+              <div id='tldr' class='subdescrip'>I go 2 RPI 4 CS & I &#60;3 CS!</div>  
+              <!--Default-->
+              <div id='default' class='subdescrip'>Hello! My name is Ali Brooks.</div>
+              <div id='default' class='subdescrip'>I'm an aspiring computer scientist, and current independent game designer.</div>
+              <div id='default' class='subdescrip'>I'm attending at Rensslear Polytechnic Institute for my Bachelors in Computer Science.</div>
+              <div id='default' class='subdescrip'>I love all aspects of CS, but I particularly love artificial inteligence, virtual reality, augmented reality, cyber security, and game development.</div>
+              <div id='default' class='subdescrip'>Outside of that, I love reading, writing, playing video games, and diving down research rabbit holes to scratch my curiosity itch!</div>
+              <!--TMI-->
+              <div id='TMI' class='subdescrip'>Greetings! It's very nice to meet you, my name is Ali Brooks.</div>
+              <div id='TMI' class='subdescrip'>I'm an aspiring computer scientist, and current independent game designer. You can find some of the games I made in my Portfolio page!</div>
+              <div id='TMI' class='subdescrip'>I'm attending Rensslear Polytechnic Institute in Troy New York for my Bachelors in Computer Science major, and I plan on dualing in Games Simulation Arts and Science (GSAS).</div>
+              <div id='TMI' class='subdescrip'>I went to Gilman in Baltimore Maryland for highschool, where I learned about Java programming in AP Computer Science A, and Java Data Structures in Honors Advanced Topics In Computer Science.</div>
+              <div id='TMI' class='subdescrip'>While I was in highschool, I taught myself HTML/CSS and python. And I am currently learning and using Javascript and C++ primarily.</div>
+              <div id='TMI' class='subdescrip'>I love all aspects of CS, but I particularly love artificial inteligence, virtual reality, augmented reality, cyber security, and game development.</div>
+              <div id='TMI' class='subdescrip'>Outside of that, I love reading, writing, playing video games, working at cat shelters, working in bee hives, and diving down research rabbit holes to scratch my curiosity itch! I've also been practicing my art.</div>
             </div>
-            <br>
-            <hr>
-            <br>
-            <!--TLDR-->
-            <div id='tldr' class='subdescrip'>Hi! I'm Ali.</div>
-            <div id='tldr' class='subdescrip'>I go 2 RPI 4 CS & I &#60;3 CS!</div>  
-            <!--Default-->
-            <div id='default' class='subdescrip'>Hello! My name is Ali Brooks.</div>
-            <div id='default' class='subdescrip'>I'm an aspiring computer scientist, and current independent game designer.</div>
-            <div id='default' class='subdescrip'>I'm attending at Rensslear Polytechnic Institute for my Bachelors in Computer Science.</div>
-            <div id='default' class='subdescrip'>I love all aspects of CS, but I particularly love artificial inteligence, virtual reality, augmented reality, cyber security, and game development.</div>
-            <div id='default' class='subdescrip'>Outside of that, I love reading, writing, playing video games, and diving down research rabbit holes to scratch my curiosity itch!</div>
-            <!--TMI-->
-            <div id='TMI' class='subdescrip'>Greetings! It's very nice to meet you, my name is Ali Brooks.</div>
-            <div id='TMI' class='subdescrip'>I'm an aspiring computer scientist, and current independent game designer. You can find some of the games I made in my Portfolio page!</div>
-            <div id='TMI' class='subdescrip'>I'm attending Rensslear Polytechnic Institute in Troy New York for my Bachelors in Computer Science major, and I plan on dualing in Games Simulation Arts and Science (GSAS).</div>
-            <div id='TMI' class='subdescrip'>I went to Gilman in Baltimore Maryland for highschool, where I learned about Java programming in AP Computer Science A, and Java Data Structures in Honors Advanced Topics In Computer Science.</div>
-            <div id='TMI' class='subdescrip'>While I was in highschool, I taught myself HTML/CSS and python. And I am currently learning and using Javascript and C++ primarily.</div>
-            <div id='TMI' class='subdescrip'>I love all aspects of CS, but I particularly love artificial inteligence, virtual reality, augmented reality, cyber security, and game development.</div>
-            <div id='TMI' class='subdescrip'>Outside of that, I love reading, writing, playing video games, working at cat shelters, working in bee hives, and diving down research rabbit holes to scratch my curiosity itch! I've also been practicing my art.</div>
-          </div>
-          <script>
-            const textModules = document.getElementsByClassName('text-module');
-            const textLines = document.getElementsByClassName('subdescrip');
-
-            function setModule(setting) {
-              for (txt of textLines) {
-                  if (txt.id == setting) txt.style.display = 'block';
-                  else txt.style.display = 'none';
+            <script>
+              const textModules = document.getElementsByClassName('text-module');
+              const textLines = document.getElementsByClassName('subdescrip');
+  
+              function setModule(setting) {
+                for (txt of textLines) {
+                    if (txt.id == setting) txt.style.display = 'block';
+                    else txt.style.display = 'none';
+                }
               }
-            }
-
-            textModules[1].style.borderStyle = 'solid';
-            setModule('default');
-
-            for (let index=0; index<textModules.length; index++) {
-                let mod = textModules[index];
-                mod.addEventListener('click', () => {
-                    for (other of textModules) other.style.borderStyle = 'hidden';
-                    mod.style.borderStyle = 'solid';
-                    setModule(mod.id.split('-')[0]);
-                });
-                mod.addEventListener('mouseover', () => mod.style.cursor = 'pointer');
-            }
-          </script>  
-          <!--
-
-          TLDR:
-          Hi! I'm Ali.
-          I go 2 RPI 4 CS, and I <3 CS!
-
-          Default:
-          Hello! My name is Ali Brooks.
-          I'm an aspiring computer scientist, and current independent game designer.
-          I'm attending at Rensslear Polytechnic Institute for my Bachelors in CompSci.
-          I love all aspects of CS, but I particularly love artificial inteligence, cyber security, and game development.
-          Outside of that, I love reading, writing, playing video games, and diving down research rabbit holes to scratch my curiosity itch!
-
-          TMI:
-          Greetings! It's very nice to meet you, my name is Ali Brooks.
-          I'm an aspiring computer scientist, and current independent game designer. You can find some of the games I made in my Portfolio page!
-          I'm attending Rensslear Polytechnic Institute in Troy New York for my Bachelors in Computer Science major, and I plan on dualing in Games Simulation Arts and Science (GSAS).
-          I went to Gilman in Baltimore Maryland for highschool, where I learned about Java programming in AP Computer Science A, and Data Structures in Java in Honors Advanced Topics In Computer Science. 
-          While I was in highschool, I taught myself HTML/CSS and python. And I am currently learning and using Javascript and C++ primarily.
-          I love all aspects of CS, but I particularly love artificial inteligence, virtual reality, augmented reality, cyber security, and game development.
-          Outside of that, I love reading, writing, playing video games, and diving down research rabbit holes to scratch my curiosity itch!
-          -->
+  
+              textModules[1].style.borderStyle = 'solid';
+              setModule('default');
+  
+              for (let index=0; index<textModules.length; index++) {
+                  let mod = textModules[index];
+                  mod.addEventListener('click', () => {
+                      for (other of textModules) other.style.borderStyle = 'hidden';
+                      mod.style.borderStyle = 'solid';
+                      setModule(mod.id.split('-')[0]);
+                  });
+                  mod.addEventListener('mouseover', () => mod.style.cursor = 'pointer');
+              }
+            </script>  
+            <!--
+  
+            TLDR:
+            Hi! I'm Ali.
+            I go 2 RPI 4 CS, and I <3 CS!
+  
+            Default:
+            Hello! My name is Ali Brooks.
+            I'm an aspiring computer scientist, and current independent game designer.
+            I'm attending at Rensslear Polytechnic Institute for my Bachelors in CompSci.
+            I love all aspects of CS, but I particularly love artificial inteligence, cyber security, and game development.
+            Outside of that, I love reading, writing, playing video games, and diving down research rabbit holes to scratch my curiosity itch!
+  
+            TMI:
+            Greetings! It's very nice to meet you, my name is Ali Brooks.
+            I'm an aspiring computer scientist, and current independent game designer. You can find some of the games I made in my Portfolio page!
+            I'm attending Rensslear Polytechnic Institute in Troy New York for my Bachelors in Computer Science major, and I plan on dualing in Games Simulation Arts and Science (GSAS).
+            I went to Gilman in Baltimore Maryland for highschool, where I learned about Java programming in AP Computer Science A, and Data Structures in Java in Honors Advanced Topics In Computer Science. 
+            While I was in highschool, I taught myself HTML/CSS and python. And I am currently learning and using Javascript and C++ primarily.
+            I love all aspects of CS, but I particularly love artificial inteligence, virtual reality, augmented reality, cyber security, and game development.
+            Outside of that, I love reading, writing, playing video games, and diving down research rabbit holes to scratch my curiosity itch!
+            -->
         </div>
       </div>
     </div>
