--- a/test.html
+++ b/test.html
@@ -105,6 +105,14 @@
         font-size:25px;
         margin: 0;
       }
+      .bar { 
+        height: 10vh; 
+        position: fixed; 
+        bottom:0%;
+        width:100%; 
+        background-color: #a8a8a8; 
+      }
+
 	/* for phones*/
 @media only screen and (max-width: 880px) {
   .wrapp {flex-wrap: wrap}
@@ -164,6 +172,9 @@
           <br>
           <p>If you'd like to learn more about me and what I do, feel free to cick on the links in the navigation window to the left!</p>
         </div>
+        <div class="bar">
+          
+        </div>  
       </div>
     </div>
   </body>
