--- a/test.html
+++ b/test.html
@@ -108,10 +108,11 @@
         position: fixed; 
         bottom:0%;
         left:0%;
+        right:0%;
         padding-top: 3px;
         padding-bottom: 3px;
         width:100%; 
-        background-color: #a8a8a8; 
+        background-color: #dfdedf; 
         border: 3px outset #a8a8a8;
       }
 
