--- a/sites/about.html
+++ b/sites/about.html
@@ -159,7 +159,6 @@
           </div>
         </div>
         <div class="contentC">
-  
           <div class="contentC" style="font-family: 'apple_regular';">
             <p>How much do you want to know about me?</p>
             <!--thanks for the idea junfero-->
@@ -172,14 +171,23 @@
             <hr>
             <br>
             <!--TLDR-->
-            <div id='tldr' class='subdescrip'>Hi! I'm Ali.</div>
-            <div id='tldr' class='subdescrip'>I go 2 RPI 4 CS/ITWS & I &#60;3 CS/ITWS!</div>  
+            <div id='tldr' class='subdescrip'>
+              <p>Hi! I'm Ali.</p>
+              <p>I go 2 RPI 4 CS/ITWS & I &#60;3 CS/ITWS!</p>
+            </div>  
             <!--Default-->
-            <div id='default' class='subdescrip'>Hello! My name is Ali Brooks.<br></div>
-            <div id='default' class='subdescrip'>I'm an aspiring computer scientist, and current independent game designer.<br></div>
-            <div id='default' class='subdescrip'>I'm attending at Rensslear Polytechnic Institute for my Bachelors in Computer Science with a dual in ITWS.<br></div>
-            <div id='default' class='subdescrip'>I love all aspects of CS, but I particularly love artificial inteligence, virtual reality, augmented reality, cyber security, and game development.<br></div>
-            <div id='default' class='subdescrip'>Outside of that, I love reading, writing, playing video games, and diving down research rabbit holes to scratch my curiosity itch!<br></div>
+            <div id='default' class='subdescrip'>
+              <p>Hello! My name is Ali Brooks.</p>
+              <br>
+              <p>I'm an aspiring computer scientist, and current independent game designer.</p>
+              <br>
+              <p>I'm attending at Rensslear Polytechnic Institute for my Bachelors in Computer Science with a dual in ITWS.</p>
+              <br>
+              <p>I love all aspects of CS, but I particularly love artificial inteligence, virtual reality, augmented reality, cyber security, and game development.</p>
+              <br>
+              <p>Outside of that, I love reading, writing, playing video games, and diving down research rabbit holes to scratch my curiosity itch!</p>
+              <br>
+            </div>
             <!--TMI-->
             <div id='TMI' class='subdescrip'>
               <p>Greetings! It's very nice to meet you, my name is Ali Brooks.</p>
@@ -218,29 +226,7 @@
                   });
                   mod.addEventListener('mouseover', () => mod.style.cursor = 'pointer');
               }
-            </script>  
-            <!--
-  
-            TLDR:
-            Hi! I'm Ali.
-            I go 2 RPI 4 CS, and I <3 CS!
-  
-            Default:
-            Hello! My name is Ali Brooks.
-            I'm an aspiring computer scientist, and current independent game designer.
-            I'm attending at Rensslear Polytechnic Institute for my Bachelors in CompSci.
-            I love all aspects of CS, but I particularly love artificial inteligence, cyber security, and game development.
-            Outside of that, I love reading, writing, playing video games, and diving down research rabbit holes to scratch my curiosity itch!
-  
-            TMI:
-            Greetings! It's very nice to meet you, my name is Ali Brooks.
-            I'm an aspiring computer scientist, and current independent game designer. You can find some of the games I made in my Portfolio page!
-            I'm attending Rensslear Polytechnic Institute in Troy New York for my Bachelors in Computer Science major, and I plan on dualing in Games Simulation Arts and Science (GSAS).
-            I went to Gilman in Baltimore Maryland for highschool, where I learned about Java programming in AP Computer Science A, and Data Structures in Java in Honors Advanced Topics In Computer Science. 
-            While I was in highschool, I taught myself HTML/CSS and python. And I am currently learning and using Javascript and C++ primarily.
-            I love all aspects of CS, but I particularly love artificial inteligence, virtual reality, augmented reality, cyber security, and game development.
-            Outside of that, I love reading, writing, playing video games, and diving down research rabbit holes to scratch my curiosity itch!
-            -->
+            </script>
         </div>
       </div>
     </div>
